tests/valid/trait/method_call_short_ufcs_local_mutable_inferred_pure_receiver.facet
trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn main() -> unrestricted isize {
  let mut x = 1;
  (Runner::run x)
}
