tests/invalid/struct/nested_immutable_parent_field_assign.facet
struct Inner {
  mut value: unrestricted isize
}

struct Outer {
  inner: unrestricted Inner
}

fn main() -> unrestricted () {
  let mut o: unrestricted Outer = Outer { inner = Inner { value = 0 } };
  (o.inner.value = 1)
}
